Create buttons for rps, add div to display results

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="buttons">
+        <button class="button" id="rock">Rock</button>
+        <button class="button" id="paper">Paper</button>
+        <button class="button" id="scissor">Scissor</button>
+    </div>
+    <div class="results">
+        <p class="humanChoice"></p>
+        <p class="computerChoice"></p>
+        <p class="score"></p>
+        <p class="roundResult"></p>
+        <p class="gameResult"></p>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
