Add full UI to the game with styles

--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
-    <div class="buttons">
-        <button class="button" id="rock">Rock</button>
-        <button class="button" id="paper">Paper</button>
-        <button class="button" id="scissor">Scissor</button>
-    </div>
-    <div class="results">
-        <p class="humanChoice"></p>
-        <p class="computerChoice"></p>
-        <p class="score"></p>
-        <p class="roundResult"></p>
-        <p class="gameResult"></p>
-    </div>
-    <script src="js/main.js"></script>
+    <section>
+        <div class="buttons">
+            <button class="button" id="rock">Rock</button>
+            <button class="button" id="paper">Paper</button>
+            <button class="button" id="scissor">Scissor</button>
+        </div>
+        <div class="results">
+            <p class="humanChoice"></p>
+            <p class="computerChoice"></p>
+            <p class="score"></p>
+            <p class="roundResult"></p>
+            <p class="gameResult"></p>
+        </div>
+    </section>
+    
 </body>
 </html>
